<resources>
    <string name="app_name">AndroidListApp</string>
    <string name="action_settings">Settings</string>
    <string name="Today">Today</string>
    <string name="This_Week">This week</string>
    <string name="This_Month">This month</string>
    <string name="This_Year">This Year</string>
    <string name="Amount">Amount</string>
    <string name="Category">Category</string>
    <string name="Unit_price">Unit Price</string>
    <string name="Total_price">Total Price</string>
    <string name="Comment">Comment</string>
    <string name="Name">Name</string>

    <string-array name="catagories">
        <item>None</item>
        <item>Drink</item>
        <item>Meat</item>
        <item>Vegetable</item>
        <item>Snack</item>
        <item>Fridge</item>
        <item>Tool</item>
    </string-array>

    <string-array name="setting">
        <item>Name</item>
        <item>Category</item>
    </string-array>
    <string-array name="ArrayName">
        <item>Apple</item>
        <item>Fish</item>
        <item>Beef</item>
        <item>Lamb</item>
        <item>Beer</item>
    </string-array>
    <!--<string-array-->
    <!--name="add_item_options">-->
    <!--<item>Name</item>-->
    <!--<item>Quantity</item>-->
    <!--<item>Price</item>-->
    <!--</string-array>-->
</resources>
